--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14884,6 +14884,186 @@ ul.section-content .course-item .section-item-link .course-item-meta .item-meta-
           transform: scale(1.1);
 }
 
+
+
+
+/* custom box */
+
+.school-list-box {
+
+  position: relative;
+  display: block;
+  background: #fff;
+  border: #000000;
+  border-width: 3px;
+  border-radius: 5px;
+  border-color: #f8f8f8;
+  overflow: hidden;
+  height: 100%;
+  -webkit-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+  border: 1px solid rgba(25, 135, 84);
+  border-top: 1px solid rgba(25, 135, 84, .2);
+  border-left: 1px solid rgba(25, 135, 84, .2);
+}
+
+.school-list-box::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 3px;
+  background: #20ad96;
+  opacity: 0;
+  -webkit-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+
+}
+
+
+.school-list-box .school-caption {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 20px;
+}
+
+.school-list-box:hover {
+  background: #fff;
+  -webkit-box-shadow: 0 0 40px rgba(51, 51, 51, 0.1);
+          box-shadow: 0 0 40px rgba(51, 51, 51, 0.1);
+}
+.school-list-box:hover::before {
+  opacity: 1;
+}
+
+
+
+@media only screen and (max-width: 479px) {
+  .school-list-box .school-caption {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+.school-list-box .school-caption .left-box {
+  /* -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1; */
+          width: 70%;
+  margin-right: 30px;
+}
+@media only screen and (max-width: 479px) {
+  .school-list-box .school-caption .left-box {
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+}
+.school-list-box .school-caption .left-box .title {
+  font-size: 20px;
+  line-height: 1.5;
+  margin: 0;
+  color:#1a8d7a;
+}
+.school-list-box .school-caption .left-box .school-desc {
+  font-size: 13px;
+  padding: 10px;
+  line-height: 1.5;
+}
+
+
+.school-list-box .school-caption .right-box {
+
+      width: 25%;
+      justify-content: space-between;
+      align-items: center;
+}
+
+.school-list-box .school-caption .right-box .logo {
+  justify-content: center;
+  width: 180px;
+  /* height: 20px; */
+  padding: 20px;
+}
+
+
+
+
+.school-list-box .school-caption .right-box .logo .ratings {
+  justify-content: center;
+  text-align: center;
+  padding: 10px;
+}
+
+
+
+.school-list-box .school-caption .right-box .logo .star-rating {
+  font-size: 12px;
+  position: relative;
+  display: block;
+  margin-left: 25px;
+
+  /* margin-right: 10px; */
+}
+.school-list-box .school-caption .right-box .logo .star-rating::before {
+  font-family: "Font Awesome 5 Free";
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 1;
+  content: "\f005  \f005  \f005  \f005  \f005";
+  color: #ababab;
+}
+.school-list-box .school-caption .right-box .logo .star-rating .rating-active {
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+.school-list-box .school-caption .right-box .logo .star-rating .rating-active::before {
+  font-family: "Font Awesome 5 Free";
+  font-size: 12px;
+  font-weight: 900;
+  line-height: 1;
+  content: "\f005  \f005  \f005  \f005  \f5c0";
+  white-space: nowrap;
+  color: #f5cc26;
+}
+
+
+
+.school-list-box .school-caption .right-box .logo .star-rating .rating-active-5 {
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+.school-list-box .school-caption .right-box .logo .star-rating .rating-active-5::before {
+  font-family: "Font Awesome 5 Free";
+  font-size: 12px;
+  font-weight: 900;
+  line-height: 1;
+  content: "\f005  \f005  \f005  \f005  \f005";
+  white-space: nowrap;
+  color: #f5cc26;
+}
+
+
+
+
+
+
+
+
+
 /* 10.02. Event List CSS */
 .event-list-box {
   position: relative;
